examples/test/testpolicy10827.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10827
  namespace: namespace450
spec:
  podSelector:
    matchLabels:
      key17: value36
      key27: value8
      key4: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value40
      podSelector:
        matchLabels:
          key47: value20
